registration ui + some codes

--- a/src/ui/resources.qrc
+++ b/src/ui/resources.qrc
@@ -6,6 +6,7 @@
     <file>icons/3D_vis.png</file>
     <file>icons/register_centerlines.png</file>
     <file>icons/add_patient.png</file>
+    <file>icons/arrow-down.png</file>
     <file>icons/delete_patient.png</file>
     <file>icons/load_patient.png</file>
     <file>icons/Segmentation.png</file>
