--- a/src/ui/MainWin.ui
+++ b/src/ui/MainWin.ui
@@ -2,9 +2,6 @@
 <ui version="4.0">
  <class>MainWin</class>
  <widget class="QMainWindow" name="MainWin">
-  <property name="windowModality">
-   <enum>Qt::ApplicationModal</enum>
-  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -12,18 +9,6 @@
     <width>1462</width>
     <height>1032</height>
    </rect>
-  </property>
-  <property name="sizePolicy">
-   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-    <horstretch>0</horstretch>
-    <verstretch>0</verstretch>
-   </sizepolicy>
-  </property>
-  <property name="minimumSize">
-   <size>
-    <width>0</width>
-    <height>0</height>
-   </size>
   </property>
   <property name="palette">
    <palette>
@@ -204,12 +189,6 @@
    <iconset resource="resources.qrc">
     <normaloff>:/icon/icons/BronchoVision.ico</normaloff>:/icon/icons/BronchoVision.ico</iconset>
   </property>
-  <property name="layoutDirection">
-   <enum>Qt::LeftToRight</enum>
-  </property>
-  <property name="autoFillBackground">
-   <bool>false</bool>
-  </property>
   <property name="iconSize">
    <size>
     <width>40</width>
@@ -260,9 +239,6 @@
          <height>16777215</height>
         </size>
        </property>
-       <property name="autoFillBackground">
-        <bool>false</bool>
-       </property>
        <property name="frameShape">
         <enum>QFrame::NoFrame</enum>
        </property>
@@ -303,14 +279,8 @@
            <string notr="true">background-color: rgb(50, 50,50);
 color: rgb(157, 205, 216);</string>
           </property>
-          <property name="tabPosition">
-           <enum>QTabWidget::North</enum>
-          </property>
-          <property name="tabShape">
-           <enum>QTabWidget::Rounded</enum>
-          </property>
           <property name="currentIndex">
-           <number>0</number>
+           <number>3</number>
           </property>
           <property name="iconSize">
            <size>
@@ -318,7 +288,10 @@ color: rgb(157, 205, 216);</string>
             <height>20</height>
            </size>
           </property>
-          <property name="documentMode">
+          <property name="elideMode">
+           <enum>Qt::ElideLeft</enum>
+          </property>
+          <property name="movable">
            <bool>true</bool>
           </property>
           <widget class="QWidget" name="tab_patients">
@@ -880,10 +853,10 @@ color: rgb(157, 205, 216);</string>
                     <string notr="true">background-color: rgb(65, 65, 65);</string>
                    </property>
                    <property name="currentText">
-                    <string>Axial</string>
+                    <string>Sagittal</string>
                    </property>
                    <property name="currentIndex">
-                    <number>0</number>
+                    <number>2</number>
                    </property>
                    <property name="iconSize">
                     <size>
@@ -2496,7 +2469,7 @@ alternate-background-color: rgb(85, 255, 127);</string>
        </property>
        <widget class="QWidget" name="layout_noView"/>
        <widget class="QWidget" name="layout_2x2">
-        <layout class="QVBoxLayout" name="verticalLayout_17">
+        <layout class="QHBoxLayout" name="horizontalLayout_6">
          <property name="spacing">
           <number>3</number>
          </property>
@@ -3138,7 +3111,7 @@ background-color: rgb(0, 0, 0);</string>
                   <number>0</number>
                  </property>
                  <item>
-                  <widget class="QLabel" name="sliceNum_sagittal">
+                  <widget class="QLabel" name="label_sliceNum">
                    <property name="sizePolicy">
                     <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
                      <horstretch>0</horstretch>
@@ -3513,43 +3486,14 @@ background-color: rgb(0, 0, 0);</string>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <widget class="QToolBar" name="toolBar">
-   <property name="sizePolicy">
-    <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-     <horstretch>0</horstretch>
-     <verstretch>0</verstretch>
-    </sizepolicy>
-   </property>
-   <property name="font">
-    <font>
-     <kerning>false</kerning>
-    </font>
-   </property>
    <property name="cursor">
     <cursorShape>PointingHandCursor</cursorShape>
-   </property>
-   <property name="mouseTracking">
-    <bool>false</bool>
-   </property>
-   <property name="focusPolicy">
-    <enum>Qt::NoFocus</enum>
-   </property>
-   <property name="windowTitle">
-    <string>toolBar</string>
-   </property>
-   <property name="layoutDirection">
-    <enum>Qt::LeftToRight</enum>
-   </property>
-   <property name="autoFillBackground">
-    <bool>true</bool>
    </property>
    <property name="styleSheet">
     <string notr="true">color: rgb(98, 185, 189);</string>
    </property>
    <property name="toolButtonStyle">
     <enum>Qt::ToolButtonTextUnderIcon</enum>
-   </property>
-   <property name="floatable">
-    <bool>true</bool>
    </property>
    <attribute name="toolBarArea">
     <enum>TopToolBarArea</enum>
