--- a/src/ui/resources.qrc
+++ b/src/ui/resources.qrc
@@ -3,6 +3,8 @@
     <file>logo/logo_transparent.png</file>
   </qresource>
   <qresource prefix="icon">
+    <file>icons/bronchoscope_2.png</file>
+    <file>icons/bronchoscope.png</file>
     <file>icons/bronchs_transparent.png</file>
     <file>icons/bronchs.jpg</file>
     <file>icons/lungs_small.jpg</file>
